# cmdlime

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: build_and_test.yml
cmake/: cmdlimeConfig.cmake.in
examples/: CMakeLists.txt  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex15.cpp  ex16.cpp
include/cmdlime/: baseconfig.h  commandlinereader.h  config.h  configreader.h  customnames.h  errors.h  format.h  gnuconfig.h  posixconfig.h  postprocessor.h  shortmacros.h  simpleconfig.h  stringconverter.h  usageinfoformat.h  x11config.h
include/cmdlime/detail/: arg.h  argcreator.h  arglist.h  arglistcreator.h  command.h  commandcreator.h  commandcreatormaker.h  commandlinereaderptr.h  config.h  configaccess.h  configmacro.h  configmacros.h  configreaderptr.h  configvar.h  customnames.h  defaultformat.h  errors.h  flag.h  flagcreator.h  format.h  formatcfg.h  gnuformat.h  iarg.h  iarglist.h  icommand.h  icommandlinereader.h  iconfig.h  iconfigreader.h  iflag.h  initializedoptional.h  ioption.h  iparam.h  iparamlist.h  ivalidator.h  nameformat.h  nameof_import.h  nameutils.h  optioninfo.h  options.h  param.h  (+16 more)
include/cmdlime/detail/gsl/: pointers
tests/: CMakeLists.txt  assert_exception.h  test_default_format.cpp  test_gnu_format.cpp  test_nameutils.cpp  test_posix_format.cpp  test_postprocessor.cpp  test_simple_format.cpp  test_validator.cpp  test_x11_format.cpp
